(do not merge) a try to remove the dependency between main and user